--- a/.github /workflows/build.yml
+++ b/.github /workflows/build.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - "v*.*"
 env:
-  IMAGE_NAME: test #这是您的镜像名
+  IMAGE_NAME: micro-pipe #这是您的镜像名
 jobs:
   get-tags:
     runs-on: ubuntu-20.04
