--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,31 +17,37 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set output variable
+        id: s01
         run: |
           VERSION=edge
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
           echo "tags=${VERSION}" >> "$GITHUB_ENV"
+      - names: s02
+        run: |
+          echo ${{ env.tags }}
+          echo "${{ env.tags }}"
+          echo " ${{ steps.s01.outputs.tags }}"
           
-  push-docker-hub:
-    needs: get-tags
-    runs-on: ubuntu-20.04
-    env:
-      TZ: Asia/Shanghai
-    steps:
-      - uses: actions/checkout@v3
-      - name: Login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build && Push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.tags }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+  # push-docker-hub:
+  #   needs: get-tags
+  #   runs-on: ubuntu-20.04
+  #   env:
+  #     TZ: Asia/Shanghai
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Login
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Build && Push
+  #       uses: docker/build-push-action@v3
+  #       with:
+  #         context: .
+  #         file: ./Dockerfile
+  #         push: true
+  #         tags: |
+  #           ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.tags }}
+  #           ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
