--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,62 +10,32 @@ env:
   IMAGE_NAME: micro-pipe #这是您的镜像名
 
 jobs:
-  get-tags:
+  push-docker-hub:
     runs-on: ubuntu-20.04
     env:
       TZ: Asia/Shanghai
     steps:
       - uses: actions/checkout@v3
-      - name: Set output variable
-        id: s01
+      - name: get tags
         run: |
           VERSION=edge
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
           echo "tags=${VERSION}" >> "$GITHUB_ENV"
-          echo "tags2=002" >> "$GITHUB_OUTPUT"
-      - name: s02
-        run: |
-          echo ${{ env.tags }}
-          echo "${{ env.tags }}"
-          echo " ${{ steps.s01.outputs.tags2 }}"
+      - name: Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build && Push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.tags }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
-
-
-
-  get-tags2:
-    needs: get-tags
-    runs-on: ubuntu-20.04
-    env:
-      TZ: Asia/Shanghai
-    steps:
-      - uses: actions/checkout@v3
-      - name: s03
-        run: |
-          echo ${{ env.tags }}
-          echo "${{ needs.get-tags.env.tags }}"
-          echo " ${{ needs.get-tags.steps.s01.outputs.tags2 }}"
-          echo " ${{ needs.get-tags.s01.outputs.tags2 }}"
-
-  # push-docker-hub:
-  #   needs: get-tags
-  #   runs-on: ubuntu-20.04
-  #   env:
-  #     TZ: Asia/Shanghai
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Login
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #     - name: Build && Push
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         context: .
-  #         file: ./Dockerfile
-  #         push: true
-  #         tags: |
-  #           ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.tags }}
-  #           ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+            
