--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
           echo "tags=${VERSION}" >> "$GITHUB_ENV"
+      - name: check version
+        run: |
+          echo ${{ env.tags }}
       - name: Login
         uses: docker/login-action@v2
         with:
